# agent-ping

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  agent-ping.example.json
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
sdks/python/: README.md  pyproject.toml
sdks/python/agent_ping/: __init__.py  client.py
sidecars/whatsapp/src/: index.js
src/: config.rs  db.rs  lib.rs  outbox.rs  session.rs  types.rs  ws.rs
src/adapters/: runtime.rs
src/channels/: mod.rs  slack.rs  telegram.rs  whatsapp.rs
tests/integration/: api.rs  db.rs  lib.rs  ws.rs
tests/unit/: config.rs  db.rs  outbox.rs  session.rs  slack.rs  telegram.rs  types.rs  whatsapp.rs  ws.rs
