[package]
name = "agent-ping"
version = "0.1.0"
edition = "2021"
description = "Two-way communication daemon for channel transport, routing, and monitoring"

[lib]
name = "agent_ping"
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7", features = ["json", "ws", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "any", "sqlite", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
percent-encoding = "2"
bytes = "1"
dirs = "5"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http = "1"
hyper = "1"
once_cell = "1"
tokio-tungstenite = "0.21"
futures-util = "0.3"
wiremock = "0.6"
sqlx_mock = "0.1"
serde_json = "1"
chrono = "0.4"

[[test]]
name = "unit_config"
path = "tests/unit/config.rs"

[[test]]
name = "unit_db"
path = "tests/unit/db.rs"

[[test]]
name = "unit_session"
path = "tests/unit/session.rs"

[[test]]
name = "unit_slack"
path = "tests/unit/slack.rs"

[[test]]
name = "unit_telegram"
path = "tests/unit/telegram.rs"

[[test]]
name = "unit_whatsapp"
path = "tests/unit/whatsapp.rs"

[[test]]
name = "unit_types"
path = "tests/unit/types.rs"

[[test]]
name = "unit_outbox"
path = "tests/unit/outbox.rs"

[[test]]
name = "unit_ws"
path = "tests/unit/ws.rs"

[[test]]
name = "integration_lib"
path = "tests/integration/lib.rs"

[[test]]
name = "integration_ws"
path = "tests/integration/ws.rs"

# Note: integration_db and integration_api require SQLite file-based connections
# which have environment-specific issues on some macOS systems.
# To enable, uncomment and fix SQLite connection issues:
# [[test]]
# name = "integration_db"
# path = "tests/integration/db.rs"
# [[test]]
# name = "integration_api"
# path = "tests/integration/api.rs"

[tool.tarpaulin]
output-dir = "coverage"
tests = true
lib = true
skip-files = ["src/bin/main.rs"]

[profile.test]
opt-level = 0
