[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ping-sdk"
version = "0.1.0"
description = "Python SDK for Agent-Ping daemon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_ping*"]
